# resume-context-builder

./: .gitignore  README.md  app.py  pyproject.toml  repomix.config.json  requirements.txt
.github/workflows/: publish.yml
.streamlit/: config.toml
context_packager_data/: __init__.py  tokenizer.py
hr_tools/: __init__.py  hr_instructions.md  instruction.md  package_context.py  pdf_to_md.py
kb/: __init__.py  artifacts.py  create_model.py  db.py  eval.py  gen_model.py  graph.py  score.py  search.py  train_model.py  tuning.py  tuning_model.json  upsert.py
resume_ui/: app.py  cli.py  ingest_cli.py  scheduler_cli.py  upsert_cli.py
scripts/: vendor_tiktoken_cache.py
