[build-system]
requires = ["hatchling>=1.20.0"]
build-backend = "hatchling.build"

[project]
name = "resume-context-builder"
version = "0.1.0"
description = "Convert resumes and other docs to Markdown with MarkItDown, package with Repomix, and serve a Streamlit UI for copyable LLM context."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "HR Tools" }]
dependencies = [
  "markitdown[all]==0.1.3",
  "repomix==0.3.4",
  "streamlit==1.50.0",
  "tiktoken==0.11.0",
]

[project.urls]
Homepage = "https://github.com/overseer1/resume-context-builder"

[project.scripts]
resume-ui = "resume_ui.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["resume_ui", "hr_tools"]
force-include = { "hr_tools/hr_instructions.md" = "hr_tools/hr_instructions.md" }


